--- a/build.gradle
+++ b/build.gradle
@@ -28,18 +28,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.2.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-webflux:2.2.5.RELEASE'
 
-    //additional
-/*
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.2.5.RELEASE'
-*/
     implementation 'org.springframework.boot:spring-boot-starter-actuator:2.2.5.RELEASE'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
-/*
-    implementation 'com.h2database:h2'
-*/
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
 }
